--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "home": "https://fariraimasocha.github.io/ChatSphere",
   "name": "chatsphere",
   "private": true,
   "version": "0.0.0",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
