--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "home": "https://fariraimasocha.github.io/ChatSphere",
+  "homepage": "http: //shantel.shop",
   "name": "chatsphere",
   "private": true,
   "version": "0.0.0",
